--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,16 +1,16 @@
   
 
-	$primary-color:#3e3e5e;
-	$primary-color-dark:#2e2e4f;
-	$primary-color-light:#5d5d8a;
-	$primary-color-active:#363656;
-	$sent-message-bg-color:#89a1fc;
-	$secondary-color:#484d79;
+	$primary-color:linear-gradient(90deg, rgb(56, 0, 94) 0%, rgb(82, 35, 114) 35%, rgb(94, 25, 139) 100%);
+	$primary-color-dark:linear-gradient(90deg, rgb(56, 0, 94) 0%, rgb(82, 35, 114) 35%, rgb(94, 25, 139) 100%);
+	$primary-color-light:linear-gradient(90deg, rgb(56, 0, 94) 0%, rgb(82, 35, 114) 35%, rgb(94, 25, 139) 100%);
+	$primary-color-active:linear-gradient(90deg, rgb(56, 0, 94) 0%, rgb(82, 35, 114) 35%, rgb(94, 25, 139) 100%);
+	$sent-message-bg-color:linear-gradient(90deg, rgb(56, 0, 94) 0%, rgb(82, 35, 114) 35%, rgb(94, 25, 139) 100%);
+	$secondary-color:linear-gradient(90deg, rgb(28, 1, 46) 0%, rgb(53, 18, 77) 35%, rgb(74, 47, 92) 100%);
 	$main-text-color:#cac8ee;
 	$messages-bg:#dcddf5;
 	$received-message-bg-color:#fff;
 	$sent-message-color:#fff;
-	$received-message-color:#b3b2ca;
+	$received-message-color:#000000;
 	$success-color:#60d66a;
 	$main-padding-vertical:18px;
 	$main-padding-horizontal:16px;
@@ -24,14 +24,14 @@
 @mixin customscrollbar(){
 	&::-webkit-scrollbar-track{
 			-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-			background-color:  $main-text-color;
+			background-color:  rgb(94, 25, 139);
 		}
 		&::-webkit-scrollbar{
 			width: 5px;
 			background-color: green;
 		}
 		&::-webkit-scrollbar-thumb{
-			background-color:  $secondary-color;
+			background-color:  rgb(152, 82, 199);
 		}
 }
 
@@ -40,6 +40,7 @@ html, body, #root {
   padding: 0;
   font-family: sans-serif;
   height:100%;
+  
 }
 
 input, textarea{
@@ -108,10 +109,10 @@ input, textarea{
 }
 
 #side-bar{
+	
 	box-sizing: border-box;
 	width:33.75%;
 	height: 100%;
-	display: grid;
 	justify-content: stretch;
 	grid-template-rows: 8vh 5vh 5vh 1fr 8vh;
 	
@@ -226,7 +227,7 @@ input, textarea{
 			padding:  $main-padding;
 			
 			&.active, &:hover{
-				background: $primary-color-dark;
+				background: rgb(45, 0, 73);
 			}
 			
 			&:hover:not(.active){
@@ -389,7 +390,7 @@ input, textarea{
 	}
 	.data{
 		order:2;
-		height:100%;
+		height:75%;
 		margin-left:25px;
 		
 	}
